# Conics

./: .gitignore  CMakeLists.txt  geometry.txt  main.cpp  open_file.py  tester.cpp  tester.h
core/: core.cpp  core.h
lib/: math.h
menu/: Menu.c  menu.cpp  menu.h
src/: core.cpp  core.h  geometry.cpp  geometry.h
src/circle/: circle.cpp  circle.h
src/engine/: queryengine.cpp  queryengine.h
src/geometry/: geometry.cpp  geometry.h
src/parabola/: hyperbola.cpp  hyperbola.h  parabola.cpp  parabola.h
types/: types.h
